# daas

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.local.yml
backend/: Dockerfile
backend/app/: database.db  prestart.sh  pyproject.toml  run.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 5ec35cc69e2f_added_user.py  9bb74b90e438_init.py  bd56c29c5e19_init.py  bfa7457b7186_update.py  c57081dfbfec_revised.py  c5bb122d824b_added_initial_tables.py  da283d92bd3a_added_is_actie.py  ee5c421935ee_revised.py
backend/app/app/: __init__.py  main.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: auth.py  user.py
backend/app/app/core/: auth.py  config.py  security.py
backend/app/app/crud/: base.py  crud_user.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/models/: user.py
backend/app/app/schemas/: __init__.py  user.py
infra/: deploy.sh  main.tf  output.tf  setup.yaml  variables.tf
script/: crontab.txt  dakoku.py  holidays.csv  requirements.txt
