[tool.poetry]
name = "daas_ai"
version = "0.0.1"
description = "Dakoku-as-a-Service AI"
authors = ["sean_saito"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.8.1"}
Jinja2 = "^3.1.2"
SQLAlchemy = "^1.4.46"
alembic = "^1.9.2"
tenacity = "^8.1.0"
httpx = "^0.23.3"
jupyter = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"

